fixed broken layout from last commit

--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -1,20 +1,3 @@
 .navbar {
 	margin-bottom: 0;
 }
-
-.banner-container {
-	position: relative;
-}
-.reservation-form *{
-	text-align: center;
-}
-.reservation-form{
-	color: #fff;
-	background: rgba(0, 0, 0, 0.4);
-	position: absolute;
-	right: 0;
-	top:0;
-	bottom:0;
-	z-index: 99;
-	padding: 12px 28px;
-}
